src/test/resources/mutation/error/serviceMethodNotFound/schema.graphqls
type Mutation {
  editCustomerSimple(id0: ID!, id1: ID!): ID! @service(name: "TEST_CUSTOMER")
}
